[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["nichlas rasmussen <nichlas.rasmussen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
advent-of-code-data = "^1.3.0"
scikit-learn = "^1.1.3"
networkx = "^2.8.8"
browser-cookie3 = "^0.16.2"
z3-solver = "^4.11.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
